syntax = "proto3";

package com.example.internalapi.request.reservation.create.proto;

option java_multiple_files = true;

import "com/example/internalapi/model/reservation.proto";
import "com/example/internalapi/model/error/error.proto";

message CreateReservationRequest {
  string user_id = 1;
  string library_id = 2;
  string book_id = 3;
}

message CreateReservationResponse {
  oneof response {
    Success success = 1;
    Failure failure = 2;
  }

  message Success {
    example.internalapi.model.Reservation reservation = 1;
  }

  message Failure {
    string message = 100;

    oneof error {
      example.internalapi.model.Error not_found_error = 1;
      example.internalapi.model.Error book_availability_error = 2;
      example.internalapi.model.Error unknown_error = 3;
    }
  }
}
